[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interfaces/Interface.gd" type="Script" id=1]
[ext_resource path="res://fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=2]
[ext_resource path="res://Interfaces/Pause/InterfacePause.tscn" type="PackedScene" id=3]

[node name="Interface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 384.0
margin_right = 385.0
margin_bottom = 505.0

[node name="PointOpponent" type="Label" parent="."]
margin_left = 320.0
margin_top = 8.0
margin_right = 360.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1

[node name="PointPlayer" type="Label" parent="."]
margin_left = 408.0
margin_top = 8.0
margin_right = 448.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1

[node name="Pause" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="continueGame" from="Pause" to="." method="_on_Pause_continueGame"]
[connection signal="exitGame" from="Pause" to="." method="_on_Pause_exitGame"]
